--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ Weekly Challenges: Play different games every week to test and improve your skil
 
 </p>
     </head>
-    <body style="background-image: url('../images/background.jpeg'); /* Badilisha jina la picha */
-      background-size: cover;       /* Hufanya picha ifit vizuri */
-      background-repeat: no-repeat; /* Haita-rudia picha */
-      background-position: center;  /* Inaiweka katikati */">
+    <body style="background-image: url('../images/background.jpeg'); 
+      background-size: cover;       
+      background-repeat: no-repeat; 
+      background-position: center;  
         <h1> our plaform has the following</h1>
         <p>List of 20 English Challenges
 Vocabulary & Meaning (Review) ✅
@@ -100,7 +100,8 @@ Read a short passage and answer questions to test understanding.</p>
 <p>19.conversation based on daily situation and diffrent area</p>
 <p>20.Listen audio based on certain passage and answer what passage is about</p>
 <p>21. Listening,writing and speaking skills</p>
-<h2>Now go to challenge page <a href="../html/challenges.html"><button style="background-color: blueviolet;height: 50px; border-radius:25px;">click here</button></a></h2>
+<h2>Now go to challenge page <a href="https://mnemba-org.github.io/English-game-challenges/html/challenges.html"><button style="background-color: blueviolet;height: 50px; border-radius:25px;">click here</button></a></h2>
 
     </body>
+
 </html>
