--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Weekly Challenges: Play different games every week to test and improve your skil
     <body style="background-image: url('../images/background.jpeg'); 
       background-size: cover;      
       background-repeat: no-repeat; 
-      background-position: center;  
+      background-position: center; ">  
         <h1> our plaform has the following </h1>
         <p>List of 20 English Challenges
 Vocabulary & Meaning (Review) ✅
@@ -104,3 +104,4 @@ Read a short passage and answer questions to test understanding.</p>
 
     </body>
 </html>
+
