--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ Read a short passage and answer questions to test understanding.</p>
 <p>19.conversation based on daily situation and diffrent area</p>
 <p>20.Listen audio based on certain passage and answer what passage is about</p>
 <p>21. Listening,writing and speaking skills</p>
-<h2>Now go to challenge page <a href="../html/challenges.html"><button style="background-color: blueviolet;height: 50px; border-radius:25px;">click here</button></a></h2>
+<h2>Now go to challenge page <a href="https://mnemba-org.github.io/English-game-challenges/html/challenges">click here</button></a></h2>
 
     </body>
 </html>
+
 
