--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="google-site-verification" content="p2QyROyc8E3H0qscrBx603eiJmh1keNaUrv84STq2a0" />
         <title>Learn English with games</title>
         <h1>Welcom to our english challenges website</h1>
         <p>Welcome to the English Challenge Zone!
@@ -104,6 +105,7 @@ Read a short passage and answer questions to test understanding.</p>
 
     </body>
 </html>
+
 
 
 
